# blurring

./: .gitignore  LICENSE  README.rst  setup.cfg  setup.py
examples/: create_frames.py  interface.py  tempgen.py  workfolder.py
src/blurring/: __init__.py  __main__.py  blur.py  cli.py  data.py  hook.py  utils.py
src/blurring/utils/: __init__.py  misc.py  temp.py
tests/: support.py  test_blur.py  test_cli.py  test_data.py  test_utils.py  test_utils_data.py
