[metadata]
name = blurring
author = Axel Juraske
author_email = axel.juraske@short-report.de
url = https://github.com/axju/blurring
description = Censor videos automatically
long_description = file: README.rst
keywords = video,
license = MIT
classifiers =
   License :: OSI Approved :: MIT License
   Programming Language :: Python :: 3
   Programming Language :: Python :: 3.5
   Programming Language :: Python :: 3.6
   Programming Language :: Python :: 3.7
   Programming Language :: Python :: 3 :: Only
   Environment :: Console

[tox:tox]
envlist = py35, py36, py37, flake8, pylint
skipt_missing_interpreters = True

#[testenv]
#commands = python -m unittest discover -v

[testenv:flake8]
deps = flake8
commands = flake8 src/blurring

[testenv:pylint]
deps = pylint
commands = pylint --rcfile=setup.cfg src/blurring

[flake8]
max-line-length = 160

[pylint]
disable = E1101, W0613
max-line-length = 160
